updated bootstrap styling, began working on registration forms

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,11 +1,4 @@
-<html>
-<head>
-<title>
-    
-</title>
-<body>
+{% extends "layout.html" %}
+{% block content %}
     <h1>About Page</h1>
-</body>
-</head>
-
-</html>
+{%  endblock content %}
